YUK-9469 Beat The Peak -Changed to using String alertlevel instead of int tier